--- a/raspPiScripts/server/templates/layout.html
+++ b/raspPiScripts/server/templates/layout.html
@@ -3,6 +3,11 @@
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <div class=page>
   <h1>MachineSpy</h1>
+  <div class=metanav>
+  {% if current_user.is_authenticated %}
+    <a id=logout_link href="{{ url_for('logout') }}">log out</a>
+  {% endif %}
+  </div>
   {% for message in get_flashed_messages() %}
     <div class=flash>{{ message }}</div>
   {% endfor %}
