--- a/raspPiScripts/server/static/style.css
+++ b/raspPiScripts/server/static/style.css
@@ -6,14 +6,14 @@ h2              { font-size: 1.2em; }
 
 .page           { margin: 2em auto; width: 35em; border: 5px solid #ccc;
                   padding: 0.8em; background: white; }
-.entries        { list-style: none; margin: 0; padding: 0; }
-.entries li     { margin: 0.8em 1.2em; }
-.entries li h2  { margin-left: -1em; }
-.entries li h1  { font-size: 0.9em; }
-.entries li div { text-align:right; }
-.entries li div span { float:left; }
-.add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
-.add-entry dl   { font-weight: bold; }
+.sensors        { list-style: none; margin: 0; padding: 0; }
+.sensors li     { margin: 0.8em 1.2em; }
+.sensors li h2  { margin-left: -1em; }
+.sensors li h1  { font-size: 0.9em; }
+.sensors li div { text-align:right; }
+.sensors li div span { float:left; }
+.add-sensor     { font-size: 0.9em; border-bottom: 1px solid #ccc; }
+.add-sensor dl  { font-weight: bold; }
 .metanav        { text-align: right; font-size: 0.8em; padding: 0.3em;
                   margin-bottom: 1em; background: #fafafa; }
 .flash          { background: #cee5F5; padding: 0.5em;
